[gd_scene load_steps=2 format=3 uid="uid://ccharselect"]

[ext_resource type="Script" path="res://scripts/ui/character_select.gd" id="1_script"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Select Character"
horizontal_alignment = 1

[node name="CharacterGrid" type="GridContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="InfoPanel" type="PanelContainer" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel/VBox/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="CenterContainer/Panel/VBox/InfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Character Name"
horizontal_alignment = 1

[node name="DetailsLabel" type="Label" parent="CenterContainer/Panel/VBox/InfoPanel/VBox"]
layout_mode = 2
text = "Level 1 Male Warrior
Empire: Shinsoo"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="CenterContainer/Panel/VBox/ButtonRow"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Back"

[node name="DeleteButton" type="Button" parent="CenterContainer/Panel/VBox/ButtonRow"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
disabled = true
text = "Delete"

[node name="PlayButton" type="Button" parent="CenterContainer/Panel/VBox/ButtonRow"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
disabled = true
text = "Play"

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
title = "Delete Character"
initial_position = 2
size = Vector2i(350, 150)
ok_button_text = "Delete"

[node name="VBox" type="VBoxContainer" parent="DeleteDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 342.0
offset_bottom = 100.0

[node name="NameInput" type="LineEdit" parent="DeleteDialog/VBox"]
layout_mode = 2
placeholder_text = "Type character name..."

[connection signal="pressed" from="CenterContainer/Panel/VBox/ButtonRow/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBox/ButtonRow/DeleteButton" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBox/ButtonRow/PlayButton" to="." method="_on_play_pressed"]
[connection signal="confirmed" from="DeleteDialog" to="." method="_on_delete_dialog_confirmed"]
